# TCRP

./: .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE1_README.md  QUICKSTART.md  README.md  checkpoint_evaluation.ipynb  crp_analysis_script.py  diary.md  experiments_training.ipynb  mitbih_classification.ipynb  pre-commit-config.yaml  prompts.md  pyproject.toml  run_baselines.sh  tasks.md  tasks_classification.md  test_phase1_concepts.ipynb  test_phase2_model.ipynb  train_baseline_script.py  train_script.py
.claude/: settings.local.json
.devcontainer/: post-create.sh  post-start.sh
checkpoints/: ETTh1_T336_H96_best.pt  smoke_test_best.pt
configs/: crp_analysis.yaml  train.yaml  train_baselines.yaml  train_classification.yaml
configs/datasets/: cwru.yaml  ecg5000.yaml  ethanol_concentration.yaml  etth1.yaml  ettm2.yaml  exchange_rate.yaml  fx_eurusd.yaml  gefcom2014.yaml  mitbih.yaml  sleep_edf.yaml  sp500.yaml  uci_har.yaml  weather.yaml
configs/experiments/: etth1_H192.yaml  etth1_H336.yaml  etth1_H720.yaml  etth1_H96.yaml  ettm2_H192.yaml  ettm2_H336.yaml  ettm2_H720.yaml  ettm2_H96.yaml  exchange_rate_H192.yaml  exchange_rate_H336.yaml  exchange_rate_H720.yaml  exchange_rate_H96.yaml  weather_H192.yaml  weather_H336.yaml  weather_H720.yaml  weather_H96.yaml
configs/models/: nbeats.yaml  tcn.yaml  tcrp.yaml  tcrp_classifier.yaml
configs/trainers/: baseline_trainer.yaml  classification_trainer.yaml  tcrp_trainer.yaml
results/: training_experiments.csv
scripts/: adversarial_compare.py  run_baseline_classification.py  run_classification.py  visualise.py
tcrp/analysis/: __init__.py  lrp.py  narrator.py  tcrp_analysis.py  visualise.py
tcrp/concepts/: __init__.py  autocorrelation.py  concept_vector.py  curvature.py  distribution_shape.py  monotonicity.py  periodicity.py  stochastic.py  structural_breaks.py  test_concepts.py  volatility.py
tcrp/data/: classification_datasets.py
tcrp/dataset/: __init__.py  classification_datasets.py  datasets.py  preprocessing.py
tcrp/diagnostics/: __init__.py  concept_purity.py
tcrp/eval/: __init__.py  classification_metrics.py  concept_class_profile.py  concept_interaction.py
tcrp/model/: __init__.py  aggregation.py  baselines.py  bottleneck.py  classification_baselines.py  classifier.py  configs.py  decoder.py  encoder.py  forecaster.py  segmentation.py
tcrp/pipelines/: __init__.py  analyse.py  config.py  evaluate.py  train.py
tcrp/training/: __init__.py  adversarial_trainer.py  baseline_trainer.py  (+3 more)
tests/: test_adversarial.py
(+72 files in other folders)
